--- a/docs/resources/manifest.json
+++ b/docs/resources/manifest.json
@@ -1,7 +1,7 @@
 {
- "name": "Review Companion",
- "short_name":"DigiCat",
- "description": "Contains ECE reviewers",
+ "name": "Your New Information Ground",
+ "short_name":"Y.N.I.G",
+ "description": "Contains reviewers specifically for E.C.E" ,
  "scope":".",
  "start_url":"/?appView=yes",
  "display" : "fullscreen",
@@ -44,6 +44,17 @@
    "sizes": "192x192",
    "type": "image\/png",
    "density": "4.0"
-  }
+ },
+  {
+      "src": "\/manifest-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "\/manifest-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+
  ]
 }
